[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/UI/Menus/BugMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Fonts/Revamped.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16 Monospaced.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://game/UI/DBRequest/GetBugTypesRequest.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/UI/DBRequest/BugRequest.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 2 )

[node name="BugMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 860.0
margin_bottom = 440.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 117.409
margin_right = 860.0
margin_bottom = 153.409
custom_fonts/font = SubResource( 1 )
text = "Registro de Bug"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserLabel" type="Label" parent="."]
margin_left = 144.396
margin_top = 194.354
margin_right = 222.396
margin_bottom = 220.354
custom_fonts/font = SubResource( 2 )
text = "Usuario"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserName" type="LineEdit" parent="."]
margin_left = 272.039
margin_top = 187.75
margin_right = 445.039
margin_bottom = 223.75
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 494.795
margin_top = 194.354
margin_right = 572.795
margin_bottom = 220.354
custom_fonts/font = SubResource( 2 )
text = "Nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelOption" type="OptionButton" parent="."]
margin_left = 559.242
margin_top = 191.367
margin_right = 619.242
margin_bottom = 221.367
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomLabel" type="Label" parent="."]
margin_left = 494.795
margin_top = 260.876
margin_right = 572.795
margin_bottom = 286.876
custom_fonts/font = SubResource( 2 )
text = "Salon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomOption" type="OptionButton" parent="."]
margin_left = 560.169
margin_top = 261.403
margin_right = 620.169
margin_bottom = 291.403
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 273.0
margin_top = 257.0
margin_right = 444.0
margin_bottom = 289.0
text = "Elemento 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BugLabel" type="Label" parent="."]
margin_left = 144.355
margin_top = 257.319
margin_right = 234.355
margin_bottom = 283.319
custom_fonts/font = SubResource( 2 )
text = "Tipo Bug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="."]
margin_left = 143.451
margin_top = 321.669
margin_right = 260.451
margin_bottom = 347.669
custom_fonts/font = SubResource( 2 )
text = "Descripcion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="."]
margin_left = 668.673
margin_top = 383.811
margin_right = 815.673
margin_bottom = 426.811
custom_fonts/font = SubResource( 4 )
text = "Enviar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionTextEdit" type="TextEdit" parent="."]
margin_left = 273.0
margin_top = 320.0
margin_right = 619.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 5 )
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorPopup" type="Popup" parent="."]
margin_left = 641.0
margin_top = 131.0
margin_right = 838.0
margin_bottom = 342.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ErrorPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ErrorPopup"]
margin_left = 4.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GetBugTypesRequest" parent="." instance=ExtResource( 5 )]

[node name="BugRequest" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
